# AddressBookAPI

./: .gitignore  README.md  coverage  db.sqlite3  pyproject.toml
.github/workflows/: python-app.yml
addressbook/: constraints.py  models.py  permissions.py  serializers.py  urls.py  views.py
addressbook/migrations/: 0001_initial.py  0002_initial.py  0003_alter_addressbook_country.py  0004_alter_addressbook_country.py  0005_alter_addressbook_country.py  0006_alter_addressbook_country.py  0007_alter_addressbook_country.py  0008_alter_addressbook_country.py  0009_alter_addressbook_country.py  0010_alter_addressbook_country_and_more.py  0011_alter_addressbook_unique_together.py  0012_alter_addressbook_unique_together.py  0013_alter_addressbook_unique_together.py  0014_alter_addressbook_unique_together.py
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_username.py
authentication/tests/: test_models.py
core/: settings.py  urls.py
helpers/: models.py
